--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,13 @@ button {
 img {
   display: block;
 }
-
+/* @keyframes rotator {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360);
+  } */
 /* 📌 Utils */
 
 .visually-hidden {
@@ -471,7 +477,69 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
+/*==================== MODAL */
+.backdrop {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 300ms linear, visibility 300ms linear;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 500px;
+  min-height: 576px;
+  border-radius: 5px;
+  transform: translate(-50%, -50%);
+  padding: 30px;
+  background-color: #fcfcfc;
+  transition: transform 300ms linear;
+}
 
+.modal-clos {
+  width: 30px;
+  height: 30px;
+  border: 1px solid #999999;
+  background-color: #ffffff;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+}
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0);
+}
+
+/* =================================== */
+.projects-wraper {
+  position: relative;
+  overflow: hidden;
+}
+.projects-item:hover .overlay {
+  transform: translateY(0);
+}
+.overlay {
+  position: absolute;
+  line-height: 1.5;
+  padding: 40px;
+  top: 0;
+  font-size: 18px;
+  font-weight: 600;
+  color: #ffffff;
+  background-color: #4d5ae5;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 300ms linear;
+}
 /* 📌 nth-child example */
 
 /* .projects-item:not(:nth-child(3n)) {
@@ -506,4 +574,4 @@ img {
   background-image: url(../images/astronaut.svg);
   background-repeat: no-repeat;
 } */
-/* animate__backInUp */
+/* animate__backInUp */ ;
