--- a/css/styles.css
+++ b/css/styles.css
@@ -117,17 +117,28 @@ img {
   padding-top: 24px;
   padding-bottom: 24px;
   color: var(--blue-color);
-
   font-weight: 500;
-
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  position: relative;
 }
 .navigation-list .link:hover,
 .navigation-list .link:focus,
 .navigation-list .link.current {
   color: var(--variable-color);
+}
+.navigation-list .link.current::after {
+  width: 100%;
+  height: 4px;
+  left: 0;
+  bottom: 0;
+  display: block;
+  content: '';
+  position: absolute;
+  border-radius: 2px;
+  background-color: #404bbf;
+  pointer-events: none;
 }
 
 /*📌===contacts */
@@ -186,6 +197,7 @@ img {
 .hero-title {
   color: var(--white-color);
   font-weight: 700;
+  width: 496px;
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
@@ -446,8 +458,9 @@ img {
   flex-wrap: wrap;
   margin: -24px -12px;
 }
-.projects-item:hover,
-.projects-item:focus {
+.projects-img:hover,
+.projects-img:focus {
+  display: block;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
@@ -490,7 +503,7 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 500px;
+  width: 408px;
   min-height: 576px;
   border-radius: 5px;
   transform: translate(-50%, -50%);
@@ -500,10 +513,10 @@ img {
 }
 
 .modal-clos {
-  width: 30px;
-  height: 30px;
-  border: 1px solid #999999;
-  background-color: #ffffff;
+  width: 24px;
+  height: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: #e7e9fc;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -518,13 +531,19 @@ img {
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scale(0);
 }
+.modal-clos:hover,
+.modal-clos:focus {
+  background-color: #404bbf;
+  fill: #ffffff;
+}
 
 /* =================================== */
 .projects-wraper {
   position: relative;
   overflow: hidden;
 }
-.projects-item:hover .overlay {
+.projects-img:hover .overlay {
+  display: block;
   transform: translateY(0);
 }
 .overlay {
@@ -540,6 +559,7 @@ img {
   transform: translateY(100%);
   transition: transform 300ms linear;
 }
+
 /* 📌 nth-child example */
 
 /* .projects-item:not(:nth-child(3n)) {
